--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <body>
 
     <div class="screenshot-container">
-        <img src="screencapture-file-C-Users-vaish-Downloads-saveweb2zip-com-what-if-you-knew-it-was-6louq4n-gamma-site-1-index-html-2025-02-01-00_26_52.png" alt="Website Screenshot">
+        <img src="21st-century.png" alt="Website Screenshot">
     </div>
 
     <script>
